samples/_failures_safe/1761705966_6eb4de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdcc9085.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cdcc9085.c:162:9: error: expected expression at end of input
  162 |         tokens[token_count].value[
      |         ^~~~~~
./samples/SAFE/__tmp_cdcc9085.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdcc9085.c:162:9: error: expected declaration or statement at end of input
